# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.20.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Interpret escapes for portage config files in the way portage does,
	  see http://bugs.gentoo.org/show_bug.cgi?id=316907
	  Thanks to Michał Górny <gentoo at mgorny.alt.pl> for the main part
	  of the patch.
	- scripts: Avoid race conditions in traps.
	- scripts: Avoid "local" keyword as it is not POSIX.
	- configure: Treat sqlite with PKG_CHECK_MODULES if possible.

*eix-0.20.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support RESTRICT=parallel.
	- Support RESTRICT=primaryuri in xml output.
	- Ignore hidden files/dirs in local set dirs like /etc/portage/sets
	  See http://bugs.gentoo.org/show_bug.cgi?id=315611
	- Fix linking of standalone versionsort with gettext, see
	  http://bugs.gentoo.org/show_bug.cgi?id=313267
	  Thanks a lot to Javier Villavicencio <the_paya at gentoo.org>
	  for examining the cause. This should also fix
	  http://bugs.gentoo.org/show_bug.cgi?id=305737
	- Transfer manpage to utf8 to make it work with heirloom-doctools.
	  This makes the manpage work only with .utf8 locales. If somebody
	  knows a better fix for http://bugs.gentoo.org/show_bug.cgi?id=294402
	  please let me know.
	- Use -flto and -fwhole-program of gcc-4.5
	- Improve automagic in warning flags (test without -Werror);
	  this could prevent previously e.g. -Wall from being auto-added.

*eix-0.20.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Output in --xml up to two mask_type/unmask_type:
	  One for the keyword type and one for the hard/profile mask:
	  http://sourceforge.net/tracker/?
	  func=detail&atid=710608&aid=2968195&group_id=128101
	- eix-remote/eix-layman: work around bug of newer layman or python
	  which misinterprets python -c ... as option -c for layman, see
	  http://bugs.gentoo.org/show_bug.cgi?id=309685
	- eix-remote/eix-layman: support >=python-3
	- manpage: Fix indentation

*eix-0.20.2