@@ -29,6 +29,7 @@ Leonardo Valeri Manera <l.valerimanera at gmail.com>
 Cyrille Mescam <titi at oboulo.com>
 Mark J. Olah <mjo at cs.unm.edu>
 Jeremy Olexa <darkside at gentoo.org>
+Boris Petersen <transacid at gmail.com>
 Kay Ramon "YakS" Sauter  <yaks-gentoo at users.sourceforge.net> (documentation)
 Stefan Schweizer <genstef at gentoo.org>
 Bob Shaffer II <bob.shaffer.2 at gmail.com> (xml output)
